chore: rename to simple-wearos-timer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Simple Workout Timer</string>
+    <string name="app_name">Simple WearOS Timer</string>
 </resources>
